--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
 
     - name: Exécution du script Python
       run: python main.py
-     
+      
+    - name: Installation des dépendances
+      run: pip install -r requirements.txt
 
   
